# rustfi-demo

./: .gitmodules  Cargo.toml  script.md
contracts/cache/: solidity-files-cache.json
prices/: Cargo.toml
prices/src/: main.rs
uniswap-v2-bindings/: Cargo.toml
uniswap-v2-bindings/src/: a_file.rs  console.rs  console_2.rs  counter.rs  erc20.rs  i_uniswap_v2_callee.rs  i_uniswap_v2_factory.rs  i_uniswap_v2_pair.rs  i_uniswap_v2erc20.rs  ierc20.rs  lib.rs  math.rs  safe_math.rs  std_error.rs  std_json.rs  std_math.rs  std_storage.rs  uniswap_v2_factory.rs  uniswap_v2_pair.rs  uniswap_v2erc20.rs  uq11_2x_112.rs  vm.rs
