[package]
name = "prices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniswap-v2-bindings = { path = "../uniswap-v2-bindings" }
thiserror = "1"
eyre = "0.6.5"
async-trait = "0.1.53"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.24"
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
serde = { version = "1.0.124", default-features = false, features = ["derive"] }
serde_json = "1.0.85"
bigdecimal = "0.3.0"
num-bigint = "0.4.3"